Fixed overflow bugs preventing animation transitions in calendar view Styled calendar to remark today and days of the month

--- a/app/components/calendar-grid/styles.scss
+++ b/app/components/calendar-grid/styles.scss
@@ -1,14 +1,42 @@
 & {  
   & table {
+    border-collapse: collapse; 
+
     & th {
       height: 45px;
       width: calc(100vw / 7);
-      border-bottom: 1px solid lightgray;    
+      text-align: center; 
+      border-bottom: 1px solid lightgray;
     }
+
+    & tr {
+      border-bottom: 1px solid #ececec;
+    }
+
     & td {
       height: calc((100vh  - 130px) / 5);
-      border: 1px solid lightgray;
+      vertical-align: top;
       text-align: center;
     }
   }
+}
+
+.day-number {
+  font-size: 0.7em;
+  display: inline-block;
+  height: 20px;
+  width: 20px;
+  line-height: 20px;
+  margin-top: 5px;
+  color: #cecece;
+}
+
+.today {
+  background-color: #2574fd;
+  color: white !important;
+  border-radius: 50%;
+}
+
+.current-month {
+  color: #333;
 }
