--- a/app/components/measures-form/styles.scss
+++ b/app/components/measures-form/styles.scss
@@ -46,6 +46,7 @@ button {
   height: 50px;
   box-shadow: 0px 0px 5px 3px #ccc;
   border: none;
+  background-color: white;
 }
 
 
