--- a/app/components/nav-dots/styles.scss
+++ b/app/components/nav-dots/styles.scss
@@ -9,13 +9,12 @@
     width: 10px;
     height: 10px;
     margin: 0px 5px 0px 5px;
-    border: 1px solid #00000010;
     //box-shadow: 0 0px 2px 0 #00000030;
   }
 }
 
 .light-on {
-  background-image: radial-gradient(#ffffff, #eeeeee,#dddddd);
+  background-image: radial-gradient(#ff3a32, #ff0900);
 }
 
 .light-off {
