--- a/app/styles/_calendar.scss
+++ b/app/styles/_calendar.scss
@@ -9,6 +9,7 @@
     "body";
 
   & header {
+    z-index: 1;
     background-image: linear-gradient(270deg, #4f3982, #a53c5a, #ed3a33);
     color: white;
     font-size: 1.4em;
@@ -30,7 +31,7 @@
   
   & section {
     grid-area: body;
-    overflow: auto;
+    z-index: 0;
 
     // & > .item {
     //   height: 45px;
