--- a/app/styles/_measures.scss
+++ b/app/styles/_measures.scss
@@ -10,6 +10,7 @@
     "body";
 
   & header {
+    z-index: 1;
     background-image: linear-gradient(270deg, #4f3982, #a53c5a, #ed3a33);
     color: white;
     font-size: 1.4em;
@@ -31,7 +32,7 @@
   
   & section {
     grid-area: body;
-    overflow: auto;
+    z-index: 0;
 
     & > .item {
       height: 45px;
